@@ -1,3 +1,10 @@
+20080629
+ - (djm) OpenBSD CVS Sync
+   - martynas@cvs.openbsd.org 2008/06/21 07:46:46
+     [sftp.c]
+     use optopt to get invalid flag, instead of return value of getopt,
+     which is always '?';  ok djm@
+
 20080628
  - (djm) [RFC.nroff contrib/cygwin/Makefile contrib/suse/openssh.spec]
    RFC.nroff lacks a license, remove it (it is long gone in OpenBSD).
@@ -4417,4 +4424,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5024 2008/06/28 06:01:35 djm Exp $
+$Id: ChangeLog,v 1.5025 2008/06/29 12:45:13 djm Exp $
